# sieve

./: .env-example  CITATION.cff  README.md  pyproject.toml
.github/workflows/: build_docs.yml  test.yml
bigger_picker/: cli.py  integration.py  openai.py  rayyan.py
notebooks/: check_duplicates.ipynb
sieve/: batchtracker.py  cli.py  config.py  credentials.py  datamodels.py  integration.py  openai.py  rayyan.py  utils.py
tests/: test_batchtracker.py  test_credentials.py  test_datamodels.py  test_integration.py  test_openai.py  test_rayyan.py  test_utils.py
