[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sieve"
version = "0.1.0"
description = "Sieve (Systematic Identification, EValuation, and Extraction) is a set of tools to conduct abstract and full-text screening, and (eventually) data extraction."
authors = [{ name = "Taren Sanders", email = "taren.sanders@acu.edu.au" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["dotenv", "openai", "rayyan-sdk", "typer"]

[project.optional-dependencies]
dev = ["jupyter", "pytest", "pytest-cov", "rispy", "ruff"]

[project.scripts]
sieve = "sieve.cli:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [".venv", "__pycache__", "scratch*"]

[tool.ruff.lint]
extend-select = [
    "E",  # pycodestyle errors 
    "F",  # pyflakes 
    "I",  # isort 
    "B",  # flake8-bugbear 
    "UP", # pyupgrade 

]
